# OB2_TurboQuant

./: .build-uid  .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  config.yaml
.github/workflows/: release-llamacpp-manager.yml  sidecar-parity.yml
cli/: chunker.py  import_cmd.py  migrate.py
context-engine/: LICENSE  README.md  __init__.py  compressor.py  context_engineering.py  demo.py  memory.py  retriever.py
docker/: Dockerfile.llamacpp  docker-compose.yml  init.sql
docs/: api-reference.md  architecture.md  deployment.md  diagrams.md  llamacpp-architecture.md  llamacpp-host-setup.md  llamacpp-version-bump.md  llm-providers.md  postgres-setup.md  process-flows.md  security.md  test-results.md  upgrade-ob2-to-turboquant.md  user-guide.md
docs/superpowers/plans/: 2026-04-18-close-admin-bootstrap.md  2026-04-18-email-recovery.md  2026-04-19-rust-sidecar.md  2026-04-19-security-hardening.md  2026-04-22-domain-management.md  2026-04-22-ob2-mcp-test-runner.md  2026-04-25-markitdown-ingestion.md  2026-04-26-upload-provenance.md  2026-04-30-llamacpp-phase1-provider-abstraction.md  2026-04-30-llamacpp-phase2-manager-and-docker.md  2026-04-30-llamacpp-phase3-dashboard.md
docs/superpowers/specs/: 2026-04-18-close-admin-bootstrap-design.md  2026-04-18-email-recovery-design.md  2026-04-19-rust-sidecar-design.md  2026-04-19-security-hardening-design.md  2026-04-22-domain-management-design.md  2026-04-22-ob2-mcp-test-runner-design.md  2026-04-24-openwebui-chat-design.md  2026-04-24-user-management-gaps-design.md  2026-04-25-domain-export-import-design.md  2026-04-25-markitdown-ingestion-design.md  2026-04-26-upload-provenance-design.md  2026-04-30-llamacpp-provider-design.md
llamacpp-manager/: auth.ts  auth_test.ts  deno.json  main.ts  models.ts  models_test.ts  process.ts  process_test.ts  state.ts  state_test.ts
marketing/: blog-post.md  contact.md  one-pager.md  pitch-deck.md  social-posts.md  use-cases.md
retrieval/: embed_batcher.py  pyproject.toml  sidecar.py
retrieval/storage/: __init__.py  backend.py  pg_vector.py  sqlite_vec.py  two_tier.py
scripts/: docker-restart.sh  docker-start.sh  docker-stop.sh  restart.sh  start.sh  stop.sh
server/: config.ts  deno.json  index.ts  openwebui_sync.ts  runtime_config.ts  runtime_config_test.ts  sidecar.ts  users.ts
server/auth/: file_signing.ts  openwebui-sso.ts  passwords.ts  rate-limit.ts  reset-tokens.ts  sessions.ts
server/import/: chunker.ts  chunker_test.ts  jobs.ts  runner.ts  sniffer.ts  sniffer_test.ts  url_fetcher.ts
server/llm/: anthropic_provider.ts  anthropic_provider_test.ts  gemini_provider.ts  gemini_provider_test.ts  llamacpp_provider.ts  llamacpp_provider_test.ts  ollama_provider.ts  ollama_provider_test.ts  openai_provider.ts  openai_provider_test.ts  openai_sse.ts  openai_sse_test.ts  provider.ts  provider_test.ts  sse_parsers.ts
server/mail/: log.ts  mailer.ts  smtp.ts  templates.ts
server/ollama/: client.ts  pulls.ts
server/proxy/: openwebui.ts
server/routes/: _errors.ts  admin.ts  admin_llm.ts  admin_llm_test.ts  auth.ts  classifier.ts  config_api.ts  gateway.ts  mcp.ts
server/scripts/: openwebui-init.ts  reset-admin.ts
server/static/: dashboard.html  dashboard.js  graph.html  graph.js
server/static/.well-known/: security.txt
sidecar-rs/: .gitignore  Cargo.toml  rust-toolchain.toml
sidecar-rs/crates/ob2-context/: Cargo.toml
sidecar-rs/crates/ob2-context/src/: compressor.rs  engine.rs  lib.rs  packet.rs
sidecar-rs/crates/ob2-context/tests/: compressor.rs  engine.rs
sidecar-rs/crates/ob2-embedder/: Cargo.toml
sidecar-rs/crates/ob2-embedder/src/: batcher.rs  lib.rs  model.rs  stats.rs
sidecar-rs/crates/ob2-embedder/tests/: embedder.rs
sidecar-rs/crates/ob2-retriever/: Cargo.toml
sidecar-rs/crates/ob2-retriever/src/: hybrid.rs  lib.rs  tfidf.rs  tokenizer.rs
sidecar-rs/crates/ob2-retriever/tests/: hybrid.rs  tfidf.rs  tokenizer.rs
sidecar-rs/crates/ob2-sidecar/: Cargo.toml
sidecar-rs/crates/ob2-sidecar/src/: main.rs  methods.rs  state.rs
sidecar-rs/crates/ob2-storage/: Cargo.toml
sidecar-rs/crates/ob2-storage/src/: backend.rs  lib.rs  pg_vector.rs  sqlite_vec.rs  two_tier.rs  types.rs
sidecar-rs/crates/ob2-storage/tests/: sqlite_vec.rs  two_tier_soak.rs
tests/: e2e.sh  mcp_runner.py
tests/fixtures/: fake-llama-server.ts  sample.gguf  stub-llama-server.ts
tests/fixtures/import/: tiny.docx  tiny.html  tiny.md
tests/sidecar-golden/: README.md  benchmark.py  comparator.py  generate.py  rust_sidecar_client.py  sidecar_client.py  test_python.py  test_rust.py
tests/sidecar-golden/fixtures/: build_context.jsonl  build_multi_context.jsonl  capture.jsonl  delete.jsonl  delete_domain.jsonl  has_source.jsonl  knowledge_stats.jsonl  list_aliases.jsonl  list_domains.jsonl  ping.jsonl  record_source.jsonl  resolve_alias.jsonl  retrieve.jsonl  suggest_domains.jsonl  sync_status.jsonl  upsert_alias.jsonl
