[package]
name = "ob2-context"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
regex = "1"
unicode-segmentation = "1"
ob2-storage = { path = "../ob2-storage" }
ob2-retriever = { path = "../ob2-retriever" }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
