[package]
name = "ob2-retriever"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
unicode-segmentation = "1"
regex = "1"
ob2-storage = { path = "../ob2-storage" }

[dev-dependencies]
tempfile = "3"
